packages/build/tests/error/fixtures/plugin/plugin.js
export default {
  onPreBuild({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
